Fixed #4 - canvas elements don't need height:100% Also, fixed for mobile as overflow was causing scrolling issues even with overflow:hidden Removed overflow hidden Added a temporary fix to default/brush that makes the angle less flaily at closer intervals of brush distance

--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0px;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: rgb(82, 80, 78);
   display: flex;
   flex-direction: column;
