--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -12,7 +12,7 @@
 
 .render-canvas {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   position: absolute;
-  cursor:url(../textures/canvas-cursor.png) 8 0, pointer;
+  cursor:url(../textures/canvas-cursor.png) 8 8, pointer;
 }
